cluster/mediaserver/jellyfin/default-deny-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin-default-deny-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
