cluster/mediaserver/jellyfin/jellyfin-arr-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin-arr-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - sonarr
          - radarr
          - lidarr
          - seerr
    ports:
    - port: 8096
      protocol: TCP
