cluster/mediaserver/jellyfin/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin-networkpolicy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
